# spline1d

./: Cargo.toml  LICENSE-MIT  README.md
examples/: akima.rs  cardinal.rs  catmullrom.rs  csvdata.rs  fritschbutland.rs  makima.rs  pchip.rs  searchtree.rs  single_interval.rs  steffen.rs
src/: alpha.rs  binsearch.rs  lib.rs  main.rs  makima.rs  multispline.rs  pchip.rs  ppdata.rs  search_tree.rs  searchtree.rs  solve.rs  spline.rs
src/methods/: akima.rs  cardinal.rs  catmullrom.rs  fritschbutland.rs  makima.rs  mod.rs  pchip.rs  steffen.rs
