[package]
name = "spline1d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["alloc", "dep:csv"]
alloc = []

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
csv = { version = "1.1", optional = true }
nalgebra = { version = "0.32", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "2.0", optional = true }
